--- a/src/app/calc-component/package.json
+++ b/src/app/calc-component/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "clac-component",
+    "name": "calc-component",
     "version": "1.0.1",
    "description":"calculates linear equation systems",
     "keywords": [
