--- a/src/app/calc-component/package.json
+++ b/src/app/calc-component/package.json
@@ -5,6 +5,8 @@
     "keywords": [
         "npm",
         "angular",
+        "math",
+        "gauss-elimination",
         "calculation",
         "equation",
         "solver",
@@ -12,7 +14,7 @@
         "routing"
     ],
     "author":"m.grassmann",
-    "license" : "(MIT OR Apache-2.0)",
+    "license" : "MIT",
     "homepage": "https://github.com/src-mgra/calculate-component#readme",
     "scripts": {
         "build": "tsc"
